--- a/renovate.json
+++ b/renovate.json
@@ -11,7 +11,10 @@
         "patch",
         "minor",
         "major"
+      ],
+      "matchPackagePatterns": [
+        "*typescript*"
       ]
     }
-  ]
+  ] 
 }
