add slashes for regex

--- a/renovate.json
+++ b/renovate.json
@@ -13,7 +13,7 @@
         "major"
       ],
       "matchPackagePatterns": [
-        "*typescript*"
+        "/*typescript*/"
       ]
     }
   ] 
