--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,16 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["github>Angular-RU/angular-renovate-config"]
+  "packageRules": [
+    {
+      "groupName": "angular-monorepo",
+      "matchPackagePrefixes": [
+        "@angular/",
+        "zone",
+        "typescript"
+      ],
+      "matchUpdateTypes": [
+        "major"
+      ]
+    }
+  ]
 }
