--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "separateMajorMinor": true,
+  "separateMultipleMajor": true,
   "packageRules": [
     {
       "groupName": "angular-monorepo",
