--- a/renovate.json
+++ b/renovate.json
@@ -8,6 +8,7 @@
       ],
       "postUpgradeTasks": {
         "commands": [
+          "npm ci --ignore-scripts", 
           "npx ng update {{{depName}}} --from={{{currentVersion}}} --to={{{newVersion}}} --migrate-only --allow-dirty --force"
         ],
         "fileFilters": [
