Add extend from monorepo:angular-cli and monorepo:angularmaterial

--- a/renovate.json
+++ b/renovate.json
@@ -5,7 +5,9 @@
   "packageRules": [
     {
       "extends": [
-        "monorepo:angular"
+        "monorepo:angular",
+        "monorepo:angular-cli",
+        "monorepo:angularmaterial"
       ],
       "matchUpdateTypes": [
         "major",
