--- a/renovate.json
+++ b/renovate.json
@@ -7,7 +7,6 @@
       "matchManagers": [
         "npm"
       ],
-      "groupName": "angular monorepo",
       "matchUpdateTypes": [
         "major",
         "minor",
@@ -18,9 +17,10 @@
         "devDependencies"
       ],
       "matchPackagePatterns": [
-        "angular",
-        "@ngrx"
-      ]
+        "angular"
+      ],
+      "groupName": "Angular Dependencies",
+      "groupSlug": "angular_{{currentVersion}}_{{newVersion}}"
     }
   ]
 }
