--- a/renovate.json
+++ b/renovate.json
@@ -21,7 +21,7 @@
         "@ngrx"
       ],
       "groupName": "Angular Dependencies",
-      "groupSlug": "angular_{{currentVersion}}_{{newVersion}}"
+      "groupSlug": "angular_{{currentVersion}}_{{newMajor}}"
     }
   ]
 }
