trying to overwrite branchName being created
- getting rid of major-XX prefix

--- a/renovate.json
+++ b/renovate.json
@@ -21,7 +21,8 @@
         "@ngrx"
       ],
       "groupName": "Angular Dependencies",
-      "groupSlug": "angular_{{newMajor}}"
+      "groupSlug": "angular_{{newMajor}}",
+      "branchName": "renovate/{{groupSlug}}"
     }
   ]
 }
