--- a/renovate.json
+++ b/renovate.json
@@ -20,9 +20,7 @@
         "angular",
         "@ngrx"
       ],
-      "groupName": "Angular Dependencies",
-      "groupSlug": "angular_{{newMajor}}",
-      "branchName": "renovate/{{groupSlug}}"
+      "groupName": "angular"
     }
   ]
 }
